Putting overflow:hidden also on the html element to make sure the right sidebar doesn't give IE7 a horizontal scrollbar

--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -63,6 +63,7 @@
 // And to make sure there are no scrollbars when we slide a sidebar out, the
 // page needs to have overflow hidden.
 #page,
+html,
 body {
   overflow: hidden;
 }
